--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@types/react-dom": "^17.0.11",
     "@types/styled-components": "^5.1.21",
     "framer-motion": "^6.2.4",
+    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.26.0",
+    "react-icons": "^4.3.1",
     "react-query": "^3.34.13",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
@@ -26,7 +28,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build",
+    "predeploy": "npm run build"
   },
   "eslintConfig": {
     "extends": [
@@ -45,5 +49,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "homepage": "https://daveg7lee.github.io/nomflix"
 }
